agrega clases del modelo y reformateo de codigo